fix(theme): align tpr header styles with plain header behavior

--- a/theme-css-5-to-Themes@tmbundle-Support-web-themes/tpr-vue/style.css
+++ b/theme-css-5-to-Themes@tmbundle-Support-web-themes/tpr-vue/style.css
@@ -483,3 +483,138 @@ footer {
 .html-for-mac .context-menu {
     --item-hover-bg-color: #E6F0FE;
 }
+
+/* TM plain-header parity: keep preview header/layout identical to plain theme */
+#tm_webpreview_header {
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
+  background: none;
+  border: none;
+  color: black;
+  display: block;
+  font-size: inherit;
+  font-weight: bold;
+  height: 2.4em;
+  left: -2px;
+  line-height: 2.4em;
+  overflow: visible;
+  padding: 0;
+  right: -2px;
+  top: 0;
+  width: auto;
+  z-index: 10010;
+}
+
+#tm_webpreview_header #gradient {
+  height: 4.8em;
+  visibility: collapse;
+  width: 0;
+}
+
+#tm_webpreview_header #teaser {
+  display: none;
+}
+
+#tm_webpreview_header .headline {
+  background-origin: border-box;
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(240, 240, 240, 0.88)), color-stop(100%, rgba(210, 210, 210, 0.75)));
+  background-image: -webkit-linear-gradient(top, rgba(240, 240, 240, 0.88), rgba(210, 210, 210, 0.75));
+  background-image: linear-gradient(top, rgba(240, 240, 240, 0.88), rgba(210, 210, 210, 0.75));
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.3), 0 -1px 0 rgba(255, 255, 255, 0.1) inset;
+  box-sizing: border-box;
+  background-color: transparent;
+  border: none;
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 1.1em;
+  height: 100%;
+  line-height: inherit;
+  margin: 0;
+  overflow-x: hidden;
+  padding: 0 12px;
+  position: relative;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  z-index: 10;
+}
+
+#tm_webpreview_header .type {
+  background-color: #e9e9e9;
+  background-origin: border-box;
+  border-radius: 0 0 3px 3px;
+  box-shadow: 0 0.5px 1px 0 rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-top: none;
+  color: #555;
+  float: right;
+  font-size: 0.72em;
+  line-height: 1.1em;
+  margin: 0 7px;
+  max-width: 92%;
+  min-height: 3px;
+  overflow: hidden;
+  padding: 4px 8px 2px;
+  position: static;
+  text-align: center;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: auto;
+  font-weight: 400;
+  text-shadow: none;
+}
+
+#tm_webpreview_header .type:empty {
+  display: none;
+}
+
+#theme_switcher {
+  box-sizing: border-box;
+  color: #4a4a4a;
+  font-size: 0.83em;
+  font-weight: bold;
+  margin: 0;
+  opacity: 0;
+  max-width: 20em;
+  padding: 0 1em 0 0;
+  position: absolute;
+  right: 0;
+  text-align: right;
+  top: 0;
+  z-index: 100;
+}
+
+#theme_switcher:hover {
+  opacity: 1;
+}
+
+#theme_switcher form {
+  padding: 0;
+}
+
+#theme_switcher #theme_selector,
+#theme_switcher div.executor > .controls a,
+div.executor > .controls #theme_switcher a {
+  -webkit-appearance: none;
+  appearance: none;
+  background-image: url("images/arrow-down.png"), -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(255, 255, 255, 0.7)), color-stop(100%, rgba(201, 201, 201, 0.7)));
+  background-image: url("images/arrow-down.png"), -webkit-linear-gradient(top, rgba(255, 255, 255, 0.7), rgba(201, 201, 201, 0.7));
+  background-image: url("images/arrow-down.png"), linear-gradient(top, rgba(255, 255, 255, 0.7), rgba(201, 201, 201, 0.7));
+  background-size: 14px 10px, auto;
+  background-origin: border-box;
+  border-radius: 3px;
+  box-shadow: 1px 0 0 rgba(255, 255, 255, 0.15), -1px 0 0 rgba(255, 255, 255, 0.15), 0 1px 0 rgba(255, 255, 255, 0.2);
+  box-sizing: border-box;
+  background-color: #ddd;
+  background-position: right center;
+  background-repeat: no-repeat, repeat-x;
+  border: 1px solid rgba(100, 100, 100, 0.5);
+  color: #444;
+  font-weight: bold;
+  max-width: 13em;
+  outline: none;
+  padding: .2em .5em .3em;
+}
+
+#theme_switcher #theme_selector:hover,
+#theme_switcher div.executor > .controls a:hover,
+div.executor > .controls #theme_switcher a:hover {
+  background-color: #fff;
+}
